--- a/TeacherApp/templates/index.html
+++ b/TeacherApp/templates/index.html
@@ -200,11 +200,12 @@
         <div class="dropdown-header flex items-center justify-between py-4 px-5 bg-primary-500">
           <div class="flex mb-1 items-center">
             <div class="shrink-0">
-              <img src="{% static 'teacheradmin/assets/images/user/avatar-2.jpg' %}" alt="user-image" class="w-10 rounded-full" />
+              <img src="{% static 'teacheradmin/assets/images/teacher.jpg' %}" alt="user-image" class="w-20 h-20 rounded-full" />
             </div>
             <div class="grow ms-3">
-              <h6 class="mb-1 text-white">Carson Darrin 🖖</h6>
-              <span class="text-white">carson.darrin@company.io</span>
+                {% if request.session.Username %}
+              <h6 class="mb-1 text-white">Welcome, {{request.session.Username}}</h6>
+                {% endif %}
             </div>
           </div>
         </div>
@@ -212,12 +213,14 @@
           <div class="profile-notification-scroll position-relative" style="max-height: calc(100vh - 225px)">
 
             <div class="grid my-3">
-              <button class="btn btn-primary flex items-center justify-center">
+                <a href="{% url 'AdminLogout' %}">
+              <button  class="btn btn-primary flex items-center justify-center">
                 <svg class="pc-icon me-2 w-[22px] h-[22px]">
                   <use xlink:href="#custom-logout-1-outline"></use>
                 </svg>
                 Logout
               </button>
+                    </a>
             </div>
           </div>
         </div>
