--- a/TeacherApp/templates/displayinternal.html
+++ b/TeacherApp/templates/displayinternal.html
@@ -3,9 +3,24 @@
 {% block content %}
 
 <div class="container mt-5">
+    <form method="get" class="mb-5 mt-5" style="padding:10px;">
+    <div class="row">
+        <div class="col-md-4">
+            <select name="student" class="form-select" onchange="this.form.submit()">
+                <option value="">All Students</option>
+                {% for s in students %}
+                    <option value="{{ s.id }}"
+                        {% if student_id == s.id|stringformat:"s" %}selected{% endif %}>
+                        {{ s.Student_name }} ({{ s.Student_rollno }})
+                    </option>
+                {% endfor %}
+            </select>
+        </div>
+    </div>
+</form>
 
     <div class="table-responsive shadow-sm p-3 bg-white rounded">
-        <table class="table table-bordered table-hover align-middle">
+        <table class="table table-bordered table-hover align-middle" >
 
             <thead class="table-dark">
                 <tr>
