commit 20 (student password field added)

--- a/TeacherApp/templates/addstudent.html
+++ b/TeacherApp/templates/addstudent.html
@@ -64,6 +64,11 @@
                             <input type="tel" minlength="10" maxlength="10" pattern="[0-9]{10}" placeholder="Mobile Number" name="student_phone" class="form-control">
                         </div>
 
+                        <div class="mb-3">
+                            <label class="form-label">Password</label>
+                            <input type="text"  placeholder="Password" name="student_password" class="form-control">
+                        </div>
+
 
                         <div class="mb-3">
                             <label class="form-label">Profile Image</label>
