--- a/TeacherApp/templates/displaystudent.html
+++ b/TeacherApp/templates/displaystudent.html
@@ -17,6 +17,7 @@
                     <th>Semester</th>
                     <th>Duration</th>
                     <th>Mobile Number</th>
+                    <th>Password</th>
                     <th colspan="2" style="text-align:center;">Actions</th>
                 </tr>
             </thead>
@@ -37,6 +38,7 @@
                     <td>{{ i.Student_sem }}</td>
                     <td>{{ i.Student_duration }}</td>
                     <td>{{i.Student_phone}}</td>
+                    <td>{{i.Student_password}}</td>
                     <td>
                         <a href="{% url 'EditstudentPage' s_id=i.id %}">
                             <button class="btn btn-success btn-sm px-3">Edit</button>
