--- a/TeacherApp/templates/editstudent.html
+++ b/TeacherApp/templates/editstudent.html
@@ -65,6 +65,11 @@
                         </div>
 
                         <div class="mb-3">
+                            <label class="form-label">Password</label>
+                            <input type="text"  placeholder="Password" name="student_password" class="form-control" value="{{student.Student_password}}">
+                        </div>
+
+                        <div class="mb-3">
                             <img src="{{student.Student_prof.url}}" height="150px" width="150px" >
                             <label class="form-label">Profile Image</label>
                             <input type="file" placeholder="Upload Your Profile Image" name="student_prof" class="form-control">
