--- a/TeacherApp/templates/displayattendance.html
+++ b/TeacherApp/templates/displayattendance.html
@@ -3,18 +3,33 @@
 {% block content %}
 
 <div class="container mt-5">
-<form method="get" class="mb-5 mt-5" style="padding:10px;">
-    <select name="subject" class="form-select" onchange="this.form.submit()">
-        <option value="">All Subjects</option>
+ <form method="get" class="mb-3">
+        <div class="justify-content-between align-items-center" style="display:flex; gap:30px;">
 
-        {% for s in subjects %}
-            <option value="{{ s.id }}"
-                {% if request.GET.subject == s.id|stringformat:"s" %}selected{% endif %}>
-                {{ s.Subject_name }} ({{ s.Subject_code }})
-            </option>
-        {% endfor %}
-    </select>
-</form>
+            <!-- Subject Filter on left -->
+            <div style="flex:1; width:1000px;">
+                <select name="subject" class="form-select" onchange="this.form.submit()">
+                    <option value="">All Subjects</option>
+                    {% for s in subjects %}
+                        <option value="{{ s.id }}"
+                            {% if request.GET.subject == s.id|stringformat:"s" %}selected{% endif %}>
+                            {{ s.Subject_name }} ({{ s.Subject_code }})
+                        </option>
+                    {% endfor %}
+                </select>
+            </div>
+
+            <!-- PDF Button on right -->
+            <div>
+                {% if request.GET.subject %}
+                    <a href="{% url 'subject_attendance_pdf' request.GET.subject %}" class="btn btn-primary">
+                        <i class="bi bi-file-earmark-pdf"></i> Download PDF
+                    </a>
+                {% endif %}
+            </div>
+
+        </div>
+    </form>
     <div class="table-responsive shadow-sm p-3 bg-white rounded">
 
         <table class="table table-bordered table-hover align-middle">
