commit 26 (chatbot outlook set (not backend))

--- a/TeacherApp/templates/index.html
+++ b/TeacherApp/templates/index.html
@@ -147,7 +147,7 @@
                         <i data-feather="message-circle"></i>
                     </li>
                     <li class="pc-item">
-                        <a href="#" class="pc-link">
+                        <a href="{% url 'MessengerStudentList' %}" class="pc-link">
                             <span class="pc-micon"><i data-feather="send"></i></span>
                             <span class="pc-mtext">Message</span>
                         </a>
@@ -443,7 +443,7 @@
         </div>
 
         <div class="col-span-12 xl:col-span-3 md:col-span-6">
-            <a href="#">
+            <a href="{% url 'MessengerStudentList' %}">
                 <div class="card quick-access-card">
                     <div class="card-body text-center">
                         <div class="p-4 rounded-full bg-teal-100 text-teal-500 inline-block mb-3">
